<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">imdb-film-onerici</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="title">Title :</string>
	<string name="year">Year       :</string>
	<string name="rated">Rated      :</string>
	<string name="released">Released   :</string>
	<string name="runtime">Runtime    :</string>
	<string name="genre">Genre      :</string>
	<string name="director">Director   :</string>
	<string name="writer">Writer     :</string>
	<string name="actors">Actors     :</string>
	<string name="plot">Plot       :</string>
	<string name="language">Language   :</string>
	<string name="country">Country    :</string>
	<string name="awards">Awards      :</string>
	<string name="metascore">Metascore  :</string>
	<string name="imdbRating">IMDB Rating: </string>
	<string name="imdbVotes">IMDB Votes  :</string>
</resources>
