<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFCC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.emresevinc.imdb_film_onerici.MainActivity"
     >

	<Button 
	    android:id="@+id/random_button"
	    android:background="@layout/circlebutton1"
	    android:layout_height="50dp"
	    android:layout_width="50dp"
	    android:layout_gravity="center"
	    android:layout_marginTop="20dp"
	    android:onClick="showMovie"
	    />
	<ImageView 
	    android:id="@+id/imgView"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="20dp"
	    
	    />
	
	<!-- android:layout_toRightOf="@+id/titLabel" -->
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#FFCCCC"
	    android:layout_marginTop="10dp"
	    >
	<LinearLayout 
	    android:id="@+id/linearLay"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    >
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView 
	        android:id="@+id/titLabel"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:textStyle="bold"
	        android:text="@string/title"
	        />
	    <TextView 
	        android:id="@+id/titleTv"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="10dp"
	        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView 
	        android:id="@+id/yearLabel"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:textStyle="bold"
	        android:text="@string/year"
	        />
	    <TextView 
	        android:id="@+id/yearTv"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="10dp"
	        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/ratedLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/rated"
		        />
		    <TextView 
		        android:id="@+id/ratedTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/relasedLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/released"
		        />
		    <TextView 
		        android:id="@+id/relasedTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/runtimeLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/runtime"
		        />
		    <TextView 
		        android:id="@+id/runtimeTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/genreLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/genre"
		        />
		    <TextView 
		        android:id="@+id/genreTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/directorLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/director"
		        />
		    <TextView 
		        android:id="@+id/directorTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/writerLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/writer"
		        />
		    <TextView 
		        android:id="@+id/writerTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/actorsLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/actors"
		        />
		    <TextView 
		        android:id="@+id/actorsTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/plotLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/plot"
		        />
		    <TextView 
		        android:id="@+id/plotTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/languageLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/language"
		        />
		    <TextView 
		        android:id="@+id/languageTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/countryLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/country"
		        />
		    <TextView 
		        android:id="@+id/countryTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/awardsLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/awards"
		        />
		    <TextView 
		        android:id="@+id/awardsTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/metascoreLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/metascore"
		        />
		    <TextView 
		        android:id="@+id/metascoreTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/imdbRatingLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/imdbRating"
		        />
		    <TextView 
		        android:id="@+id/imdbRatingTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
		    </LinearLayout>
			<LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/imdbVotesLabel"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/imdbVotes"
		        />
		    <TextView 
		        android:id="@+id/imdbVotesTv"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="10dp"
		        />
			</LinearLayout>
		</LinearLayout>
		</ScrollView>
</LinearLayout>